Start the visualisation part.

--- a/convnets/lenet.ipynb
+++ b/convnets/lenet.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -115,12 +115,14 @@
    },
    "outputs": [],
    "source": [
+    "import time\n",
+    "\n",
     "import fuel\n",
     "from fuel.streams import DataStream\n",
     "from fuel.schemes import SequentialScheme\n",
     "from fuel.transformers import Cast\n",
     "\n",
-    "fuel.config.floatX = theano.config.floatX\n",
+    "fuel.config.floatX = theano.config.floatX = 'float32'\n",
     "\n",
     "\n",
     "def evaluate_lenet5(train, test, valid,\n",
@@ -132,10 +134,10 @@
     "        train, iteration_scheme=SequentialScheme(train.num_examples,\n",
     "                                                 batch_size))\n",
     "    valid_stream = DataStream.default_stream(\n",
-    "        valid, iteration_scheme=SequentialScheme(train.num_examples,\n",
+    "        valid, iteration_scheme=SequentialScheme(valid.num_examples,\n",
     "                                                 batch_size))\n",
     "    test_stream = DataStream.default_stream(\n",
-    "        test, iteration_scheme=SequentialScheme(train.num_examples,\n",
+    "        test, iteration_scheme=SequentialScheme(test.num_examples,\n",
     "                                                batch_size))\n",
     "\n",
     "    x = T.tensor4('x')\n",
@@ -295,34 +297,85 @@
     "    print('Best validation score of %f %% obtained at iteration %i, '\n",
     "          'with test performance %f %%' %\n",
     "          (best_validation_loss * 100., best_iter + 1, test_score * 100.))\n",
-    "    print('The code ran for %.2fm' % ((end_time - start_time) / 60.))\n"
+    "    print('The code ran for %.2fm' % ((end_time - start_time) / 60.))\n",
+    "    return params\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This cell runs the model and allows you to play with a few hyperparameters.  The ones below take about ?? minutes to run."
+    "This cell runs the model and allows you to play with a few hyperparameters.  The ones below take about 2 minutes to run."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "from fuel.datasets import MNIST\n",
     "\n",
-    "train = MNIST(which_sets=('train',), subset=slice(0, 50000))\n",
-    "valid = MNIST(which_sets=('train',), subset=slice(50000, 60000))\n",
-    "test = MNIST(which_sets=('test',))\n",
+    "train = MNIST(which_sets=('train',), subset=slice(0, 2000))\n",
+    "valid = MNIST(which_sets=('train',), subset=slice(2000, 2500))\n",
+    "test = MNIST(which_sets=('test',), subset=slice(0, 1000))\n",
     "\n",
-    "evaluate_lenet5(train, test, valid,\n",
-    "                learning_rate=0.1, n_epochs=10,\n",
-    "                nkerns=[10, 25], batch_size=500)"
+    "params = evaluate_lenet5(train, test, valid,\n",
+    "                         learning_rate=0.1, n_epochs=20,\n",
+    "                         nkerns=[10, 25], batch_size=50)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One thing that is interesting is visualization of trained filters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from utils import tile_raster_images\n",
+    "\n",
+    "filts1 = params[4].get_value()\n",
+    "filts2 = params[6].get_value()\n",
+    "\n",
+    "print filts1.shape\n",
+    "print filts2.shape\n",
+    "\n",
+    "plt.clf()\n",
+    "f, (a, b) = plt.subplots(2, sharey=True)\n",
+    "a.imshow(tile_raster_images(filts1.reshape(250, 25), img_shape=(5, 5), tile_shape=(25, 10), tile_spacing=(1,1)),\n",
+    "           cmap=\"Greys\", interpolation=\"none\")\n",
+    "b.imshow(tile_raster_images(filts2.reshape(10, 25), img_shape=(5, 5), tile_shape=(10, 1), tile_spacing=(1,1)),\n",
+    "           cmap=\"Greys\", interpolation=\"none\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
