--- a/convnets/lenet.ipynb
+++ b/convnets/lenet.ipynb
@@ -298,14 +298,19 @@
     "          'with test performance %f %%' %\n",
     "          (best_validation_loss * 100., best_iter + 1, test_score * 100.))\n",
     "    print('The code ran for %.2fm' % ((end_time - start_time) / 60.))\n",
-    "    return params\n"
+    "\n",
+    "    # This is to make the pretty pictures in the cells below\n",
+    "    layer0_out = theano.function([x], layer0.output)\n",
+    "    layer1_out = theano.function([x], layer1.output)\n",
+    "    \n",
+    "    return params, layer0_out, layer1_out"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This cell runs the model and allows you to play with a few hyperparameters.  The ones below take about 2 minutes to run."
+    "This cell runs the model and allows you to play with a few hyperparameters.  The ones below take about 1 to 2 minutes to run."
    ]
   },
   {
@@ -323,16 +328,16 @@
     "valid = MNIST(which_sets=('train',), subset=slice(2000, 2500))\n",
     "test = MNIST(which_sets=('test',), subset=slice(0, 1000))\n",
     "\n",
-    "params = evaluate_lenet5(train, test, valid,\n",
-    "                         learning_rate=0.1, n_epochs=20,\n",
-    "                         nkerns=[10, 25], batch_size=50)"
+    "params, layer0_out, layer1_out = evaluate_lenet5(train, test, valid,\n",
+    "                                                 learning_rate=0.1, n_epochs=20,\n",
+    "                                                 nkerns=[10, 25], batch_size=50)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One thing that is interesting is visualization of trained filters."
+    "For most convolution model it can be interesting to show what the trained filters look like.  The code below does that from the parameters returned by the training function above.  In this model there isn't much of an effect since the filters are 5x5 and we can't see much unfortunately."
    ]
   },
   {
@@ -349,43 +354,96 @@
     "\n",
     "from utils import tile_raster_images\n",
     "\n",
-    "filts1 = params[4].get_value()\n",
-    "filts2 = params[6].get_value()\n",
-    "\n",
-    "print filts1.shape\n",
-    "print filts2.shape\n",
+    "filts1 = params[6].get_value()\n",
+    "filts2 = params[4].get_value()\n",
     "\n",
     "plt.clf()\n",
-    "f, (a, b) = plt.subplots(2, sharey=True)\n",
-    "a.imshow(tile_raster_images(filts1.reshape(250, 25), img_shape=(5, 5), tile_shape=(25, 10), tile_spacing=(1,1)),\n",
+    "\n",
+    "# Increase the size of the figure\n",
+    "plt.gcf().set_size_inches(15, 10)\n",
+    "\n",
+    "# Make a grid for the two layers\n",
+    "gs = plt.GridSpec(1, 2, width_ratios=[1, 25], height_ratios=[1, 1])\n",
+    "a = plt.subplot(gs[0])\n",
+    "b = plt.subplot(gs[1])\n",
+    "\n",
+    "\n",
+    "# Show the first layer filters (the small column)\n",
+    "a.imshow(tile_raster_images(filts1.reshape(10, 25), img_shape=(5, 5), tile_shape=(10, 1), tile_spacing=(1,1)),\n",
     "           cmap=\"Greys\", interpolation=\"none\")\n",
-    "b.imshow(tile_raster_images(filts2.reshape(10, 25), img_shape=(5, 5), tile_shape=(10, 1), tile_spacing=(1,1)),\n",
-    "           cmap=\"Greys\", interpolation=\"none\")\n"
+    "a.axis('off')\n",
+    "\n",
+    "# Show the second layer filters (the large block)\n",
+    "b.imshow(tile_raster_images(filts2.reshape(250, 25), img_shape=(5, 5), tile_shape=(10, 25), tile_spacing=(1,1)),\n",
+    "           cmap=\"Greys\", interpolation=\"none\")\n",
+    "b.axis('off')\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "What can also be interesting is to draw the outputs of the filters for an example.  This works somewhat better for this model."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from utils import tile_raster_images\n",
+    "\n",
+    "# Grab some input examples from the test set (we cheat a bit here)\n",
+    "sample = test.get_data(None, slice(0, 50))[0]\n",
+    "# We will print this example amongst the batch\n",
+    "example = 7\n",
+    "\n",
+    "plt.gcf()\n",
+    "\n",
+    "# Increase the size of the figure\n",
+    "plt.gcf().set_size_inches(15, 10)\n",
+    "\n",
+    "gs = plt.GridSpec(1, 3, width_ratios=[1, 1, 1], height_ratios=[1, 1, 1])\n",
+    "\n",
+    "# Draw the input data\n",
+    "a = plt.subplot(gs[0])\n",
+    "a.imshow(sample[example, 0], cmap=\"Greys\", interpolation='none')\n",
+    "a.axis('off')\n",
+    "\n",
+    "# Compute first layer output\n",
+    "out0 = layer0_out(sample)[example]\n",
+    "\n",
+    "# Draw its output\n",
+    "b = plt.subplot(gs[1])\n",
+    "b.imshow(tile_raster_images(out0.reshape(10, 144), img_shape=(12, 12), tile_shape=(5, 2), tile_spacing=(1, 1)),\n",
+    "         cmap=\"Greys\", interpolation='none')\n",
+    "b.axis('off')\n",
+    "\n",
+    "# Compute the second layer output\n",
+    "out1 = layer1_out(sample)[example]\n",
+    "\n",
+    "# Draw it\n",
+    "c = plt.subplot(gs[2])\n",
+    "c.imshow(tile_raster_images(out1.reshape(25, 16), img_shape=(4, 4), tile_shape=(5, 5), tile_spacing=(1, 1)),\n",
+    "         cmap=\"Greys\", interpolation='none')\n",
+    "c.axis('off')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some possible things you can try:\n",
+    "Some things you can try with this model:\n",
     "- change the non linearity of the convolution to rectifier unit.\n",
     "- add an extra mlp layer.\n",
     "\n",
-    "If you break the code too much you can get back to the working initial code by loading the lenet.py file with the cell below."
+    "If you break the code too much you can get back to the working initial code by loading the lenet.py file with the cell below. (Or just reset the git repo ...)"
    ]
   },
   {
