Don't duplicate a function uselessly.

--- a/convnets/lenet.ipynb
+++ b/convnets/lenet.ipynb
@@ -190,12 +190,7 @@
     "    cost = layer3.negative_log_likelihood(y)\n",
     "\n",
     "    # create a function to compute the mistakes that are made by the model\n",
-    "    test_model = theano.function(\n",
-    "        [x, yi],\n",
-    "        layer3.errors(y)\n",
-    "    )\n",
-    "\n",
-    "    validate_model = theano.function(\n",
+    "    model_errors = theano.function(\n",
     "        [x, yi],\n",
     "        layer3.errors(y)\n",
     "    )\n",
@@ -259,7 +254,7 @@
     "            if (iter + 1) % validation_frequency == 0:\n",
     "\n",
     "                # compute zero-one loss on validation set\n",
-    "                validation_losses = [validate_model(vb[0], vb[1]) for vb\n",
+    "                validation_losses = [model_errors(vb[0], vb[1]) for vb\n",
     "                                     in valid_stream.get_epoch_iterator()]\n",
     "                this_validation_loss = numpy.mean(validation_losses)\n",
     "                print('epoch %i, minibatch %i/%i, validation error %f %%' %\n",
@@ -279,7 +274,7 @@
     "\n",
     "                    # test it on the test set\n",
     "                    test_losses = [\n",
-    "                        test_model(tb[0], tb[1])\n",
+    "                        model_errors(tb[0], tb[1])\n",
     "                        for tb in test_stream.get_epoch_iterator()\n",
     "                    ]\n",
     "                    test_score = numpy.mean(test_losses)\n",
